# wifiscan

./: .gitignore  Cargo.toml  README.md
assets/: AppIcon.icns  Info.plist.ext
scripts/: build-macos-app.sh  install-macos-app.sh
src/: decode.rs  main.rs
