[package]
name = "wifiscan"
version = "0.1.0"
edition = "2024"
default-run = "wifiscan"
description = "Scan Wi-Fi QR codes from the macOS menu bar and connect to networks."

[package.metadata.bundle]
name = "WiFi QR Scanner"
identifier = "com.niels.wifiscan"
icon = ["assets/AppIcon.icns"]
category = "public.app-category.utilities"
short_description = "Scan Wi-Fi QR codes and join networks on macOS."
long_description = """
WiFi QR Scanner is a native macOS application that opens the camera,
detects standard WIFI: QR payloads, and lets you join the discovered
network from a clean menu bar interface.
"""
osx_info_plist_exts = ["assets/Info.plist.ext"]

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
eframe = "0.33"
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
nokhwa = { version = "0.10", features = ["input-native"] }
quircs = "0.10"
qrcode-generator = "5.0"
zxing-cpp = { version = "0.5.1", features = ["bundled", "image"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSData", "NSDictionary", "NSObject", "NSString"] }
objc2-vision = { version = "0.3.2", features = ["VNDetectBarcodesRequest", "VNObservation", "VNRequest", "VNRequestHandler", "VNTypes"] }
tray-icon = "0.22.0"
